Fixed some layout problems with BufferPoolAV

--- a/AV/Development/BufferPoolAV.css
+++ b/AV/Development/BufferPoolAV.css
@@ -1,18 +1,21 @@
 #container {
   width: 800px;
-  height: 600px;
+  height: 668px;
+  top: 30px;
 }
 
 #bottom {
+  position: relative;
+  top: 50px;
   padding-left: 5px;
+  margin-left: -5px;
   height: 90px;
-  width: 805px;
+  width: 803px;
   border: 1px solid black;
   background-color: #ddd;
   overflow: hidden;
 }
 
-/*
 #showcounts {
   margin-right: -8px;
   float: right;
@@ -29,9 +32,6 @@
 }
 
 
-#container {
-  top: 30px;
-}
 .avcontainer {
   top: 30px;
 }
@@ -39,9 +39,13 @@
 .jsavarray {
    position: absolute;
 }
-*/
 
-.jsavnode {
+.jsavverticalarray .jsavnode {
+  min-width: 120px !important;
+  max-width: 120px !important;
+}
+
+.jsavnode. {
   line-height: 30px;
   text-align: left;
   padding-left: 20px;
@@ -58,7 +62,7 @@
 
 .jsavcanvas {
   margin-top: 10px;
-  height: 500px;
+  height: 450px;
   width: 800px;
 }
 
@@ -67,25 +71,3 @@
   width: 110px;
   border-radius: 0 !important;
 }
-
-/*
-#temp {
-  margin-top: -550px;
-  margin-left: 760px;
-}
-
-#temp .jsavcanvas{
-  margin-top: 0px;
-  margin-left: 0px;
-}
-
-#temp .jsavarray .jsavindex{
-  height: 10px;
-  width: 30px;
-  border-radius: 0 !important;
-}
-
-#procontrols{
-  text-align: left;
-}
-*/
